--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <body>
     <div class="content" style="max-width: 1400px; margin: auto;">
     {% include 'templates/header.html' %}
+    {% include 'templates/banner.html' %}
 
     {% include 'templates/footer.html' %}
     </div>
