--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,12 @@
   </head>
   <body>
     <div class="content" style="max-width: 1400px; margin: auto;">
-    {% include 'templates/header.html' %}
-    {% include 'templates/banner.html' %}
+      {% include 'templates/header.html' %}
+      {% include 'templates/jumbotron.html' %}
 
-    {% include 'templates/footer.html' %}
+      {% include 'templates/services/services.html' %}
+
+      {% include 'templates/footer.html' %}
     </div>
   </body>
 </html>
