сверстали достижения в цифрах

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
       <!-- о компании и видео -->
       {% include "templates/about.html" %}
 
+      <!-- баннер с цифрами достижений -->
+      {% include "templates/numbers/numbers.html" %}
+
       {% include 'templates/footer.html' %}
     </div>
   </body>
