сверстан баннер свяжитесь с нами

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
       <!-- баннер с цифрами достижений -->
       {% include "templates/numbers/numbers.html" %}
 
+      <!-- свяжись с нами -->
+      {% include "templates/contact-us.html" %}
+
       {% include 'templates/footer.html' %}
     </div>
   </body>
