--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
       <!-- свяжись с нами -->
       {% include "templates/contact-us.html" %}
 
+      <!-- нннннновости  -->
+      {% include "templates/news/news.html" %}
+
       {% include 'templates/footer.html' %}
     </div>
   </body>
