сверстан блок с международной школой

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,9 @@
       <!-- нннннновости  -->
       {% include "templates/news/news.html" %}
 
+      <!-- конференции семинары лекции -->
+      {% include "templates/conferences/conferences.html" %}
+
       {% include 'templates/footer.html' %}
     </div>
   </body>
