--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
   </head>
   <body>
     <div class="content" style="max-width: 1400px; margin: auto; padding:50px;">
-      {% include 'templates/header.html' %}
-      {% include
+      {% include 'templates/header.html' %} {% include
       'templates/jumbotron.html' %}
 
       <!-- четыре карточки с услугами -->
@@ -28,7 +27,9 @@
       <!-- конференции семинары лекции -->
       {% include "templates/conferences/conferences.html" %}
 
-      {% include 'templates/footer.html' %}
+      <!-- рабочие группы (предпоследняя секция) -->
+      {% include "templates/work-groups/work-groups.html" %} {% include
+      'templates/footer.html' %}
     </div>
   </body>
 </html>
