--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,11 @@
       {% include "templates/conferences/conferences.html" %}
 
       <!-- рабочие группы (предпоследняя секция) -->
-      {% include "templates/work-groups/work-groups.html" %} {% include
-      'templates/footer.html' %}
+      {% include "templates/work-groups/work-groups.html" %}
+
+      <!-- подписаться на рассылку (бооооже, почти закончил) -->
+      {% include "templates/follow-us/follow-us.html" %}
     </div>
+    {% include 'templates/footer.html' %}
   </body>
 </html>
