--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     {% include 'templates/head.html' %}
   </head>
   <body>
-    <div class="content" style="max-width: 1400px; margin: auto; padding:50px;">
+    <div class="GlobalWrapper">
       {% include 'templates/header.html' %} {% include
       'templates/jumbotron.html' %}
 
@@ -34,5 +34,6 @@
       {% include "templates/follow-us/follow-us.html" %}
     </div>
     {% include 'templates/footer.html' %}
+    <div class="sign">Made on Earth by Humans</div>
   </body>
 </html>
