починены секции выходящие за пределы контейнера

--- a/src/index.html
+++ b/src/index.html
@@ -14,26 +14,26 @@
 
       <!-- о компании и видео -->
       {% include "templates/about.html" %}
+    </div>
 
-      <!-- баннер с цифрами достижений -->
-      {% include "templates/numbers/numbers.html" %}
+    <!-- баннер с цифрами достижений -->
+    {% include "templates/numbers/numbers.html" %}
 
-      <!-- свяжись с нами -->
-      {% include "templates/contact-us.html" %}
-
+    <!-- свяжись с нами -->
+    {% include "templates/contact-us.html" %}
+    <div class="GlobalWrapper">
       <!-- нннннновости  -->
       {% include "templates/news/news.html" %}
+    </div>
+    <!-- конференции семинары лекции -->
+    {% include "templates/conferences/conferences.html" %}
 
-      <!-- конференции семинары лекции -->
-      {% include "templates/conferences/conferences.html" %}
-
-      <!-- рабочие группы (предпоследняя секция) -->
+      <!-- рабочие группы (предпоследняя секция) dragon -->
       {% include "templates/work-groups/work-groups.html" %}
 
-      <!-- подписаться на рассылку (бооооже, почти закончил) -->
-      {% include "templates/follow-us/follow-us.html" %}
-    </div>
-    {% include 'templates/footer.html' %}
+    <!-- подписаться на рассылку (бооооже, почти закончил) -->
+    {% include "templates/follow-us/follow-us.html" %} {% include
+    'templates/footer.html' %}
     <div class="sign">Made on Earth by Humans</div>
   </body>
 </html>
